--- a/app/src/main/res/layout/first_page_fragment.xml
+++ b/app/src/main/res/layout/first_page_fragment.xml
@@ -10,13 +10,15 @@
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:gravity="center"
+        android:textColor = "#000000"
+        android:textSize = "20sp"
         android:layout_marginTop="150dp"/>
 
     <Button
-        android:id="@+id/btn_goto_2"
+        android:id = "@+id/btn_go_last_page"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
-        android:text="Goto 2 page"
+        android:text = "Goto last page"
         android:layout_marginTop="100dp"
         />
 
