--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -10,6 +10,8 @@
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:text="I am HOME"
+        android:textColor = "#000000"
+        android:textSize = "20sp"
         app:layout_constraintTop_toTopOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="100dp"
@@ -26,5 +28,14 @@
         android:layout_marginTop="40dp"
         android:text="Go to 1 Page"
         />
+
+    <Button
+        android:id = "@+id/btn_click_two"
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:text = "Go to 2 page"
+        app:layout_constraintStart_toStartOf = "@+id/btn_click_me"
+        android:layout_marginTop = "20dp"
+        app:layout_constraintTop_toBottomOf = "@+id/btn_click_me" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
