--- a/app/src/main/res/layout/second_page_fragment.xml
+++ b/app/src/main/res/layout/second_page_fragment.xml
@@ -10,12 +10,14 @@
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:gravity="center"
+        android:textColor = "#000000"
+        android:textSize = "20sp"
         android:layout_marginTop="150dp"/>
 
     <Button
-        android:id="@+id/btn_go_home"
+        android:id = "@+id/btn_go_to_last"
         android:layout_marginTop="100dp"
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
-        android:text="Go Home"/>
+        android:text="Go Last Page"/>
 </LinearLayout>
