--- a/app/src/main/res/navigation/android_navigation.xml
+++ b/app/src/main/res/navigation/android_navigation.xml
@@ -40,7 +40,7 @@
         tools:layout = "@layout/first_page_fragment"
         >
         <argument
-            android:name = "flowStepNumber"
+            android:name = "testNumber"
             app:argType = "integer"
             android:defaultValue = "1"
             />
